--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -8,6 +8,9 @@ nav {
   z-index: 100;
   border: 1px solid var(--color-dark-Ex);
 }
+.navShadow {
+  box-shadow: 0 0 4rem rgba(0, 0, 0, 0.2);
+}
 .nav-container {
   display: flex;
   align-items: center;
@@ -59,13 +62,14 @@ nav {
     top: 90px;
     right: 0;
     position: fixed;
+    perspective: 400px;
   }
   .nav-links li {
     height: 100%;
     width: 100%;
     animation: navAni 600ms forwards ease;
     opacity: 0;
-    transform: rotateY(90deg);
+    transform: rotateY(-90deg);
   }
   .nav-links a {
     display: inline-block;
@@ -86,6 +90,25 @@ nav {
     opacity: 1;
   }
 }
+.nav-links li:nth-child(2) {
+  animation-delay: 200ms;
+}
+.nav-links li:nth-child(3) {
+  animation-delay: 400ms;
+}
+.nav-links li:nth-child(4) {
+  animation-delay: 600ms;
+}
+.nav-links li:nth-child(5) {
+  animation-delay: 800ms;
+}
+.nav-links li:nth-child(6) {
+  animation-delay: 1000ms;
+}
+.nav-links li:nth-child(7) {
+  animation-delay: 1200ms;
+}
+
 .menu-button {
   display: inline-block;
   color: var(--color-dark);
@@ -101,4 +124,12 @@ nav {
 }
 .navLinksHide {
   display: none;
+}
+@media (max-width: 600px) {
+  .nav-links {
+    width: 100%;
+  }
+  .menu-button {
+    display: inline-block;
+  }
 }
